--- a/productos.html
+++ b/productos.html
@@ -4,85 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo de Productos | Mercado Raíz</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header class="header">
-        <div class="logo">Mercado <span>Raíz</span></div>
-        <nav>
-            <a href="index.html">Inicio</a>
-            <a href="productos.html" class="active">Productos</a>
-            <a href="proveedor.html">Proveedores</a>
-            <a href="contacto.html">Contacto</a>
-            <span id="authContainer">
-                <a href="login.html" id="loginLink" class="btn-login">Iniciar Sesión</a>
-                <a href="#" id="logoutLink" onclick="cerrarSesion()" class="btn-logout hidden">Cerrar Sesión</a>
-            </span>
-        </nav>
+        <div class="header-container">
+            <a href="index.html" class="logo">
+                <i class="fas fa-seedling"></i> Mercado Raíz
+            </a>
+
+            <nav class="main-nav">
+                <a href="index.html">Inicio</a>
+                <a href="productos.html" class="active">Productos</a>
+                <a href="proveedor.html">Proveedores</a>
+                <a href="contacto.html">Contacto</a>
+                <a href="calidad.html">Calidad</a>
+                <a href="carrito.html">Carrito</a>
+                
+                <div class="auth-buttons" id="authContainer">
+                    <a href="login.html" id="loginLink" class="btn-login-header">Iniciar Sesión</a>
+                    <a href="#" id="logoutLink" onclick="cerrarSesion()" class="btn-logout hidden">Cerrar Sesión</a>
+                </div>
+            </nav>
+        </div>
     </header>
 
     <main>
-        <section class="category-header">
-            <h1 id="categoriaTitulo">Nuestra Cosecha</h1>
-            <div class="filter-chips">
-                <button onclick="filtrar('todos')" class="chip active">Todos</button>
-                <button onclick="filtrar('papas')" class="chip">Papas y Tubérculos</button>
-                <button onclick="filtrar('hortalizas')" class="chip">Hortalizas</button>
-                <button onclick="filtrar('frutas')" class="chip">Frutas</button>
+        <section class="carousel-section">
+            <div class="section-header">
+                <span class="hero-badge" style="margin-bottom: 10px;">Cosecha Local</span>
+                <h1 id="categoriaTitulo">Nuestra Cosecha</h1>
+                <p>Productos frescos seleccionados directamente de los productores de Cayambe.</p>
             </div>
-        </section>
 
-        <div id="productsGrid" class="products-grid">
+            <div class="text-center" style="margin-bottom: 40px;">
+                <div class="filter-chips" style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
+                    <button onclick="filtrar('todos')" class="category-card" style="padding: 10px 25px; min-width: auto;">Todos</button>
+                    <button onclick="filtrar('papas')" class="category-card" style="padding: 10px 25px; min-width: auto;">Papas y Tubérculos</button>
+                    <button onclick="filtrar('hortalizas')" class="category-card" style="padding: 10px 25px; min-width: auto;">Hortalizas</button>
+                    <button onclick="filtrar('frutas')" class="category-card" style="padding: 10px 25px; min-width: auto;">Frutas</button>
+                </div>
             </div>
+
+            <div id="productsGrid" class="container" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 30px; padding: 0 20px;">
+                </div>
+        </section>
     </main>
 
     <footer class="main-footer">
-    <div class="newsletter-section">
-        <h2>Suscríbete a Nuestro Boletín</h2>
-        <p>¡Obtén un descuento del 10% en tu primera compra! Recibe noticias y ofertas directamente en tu correo.</p>
-        <form class="newsletter-form">
-            <input type="email" placeholder="tu@email.com" required>
-            <button type="submit">Registrarse</button>
-        </form>
-        <p class="privacy-note">Respetamos tu privacidad. Nunca compartiremos tu información.</p>
-    </div>
-
-    <div class="footer-content">
-        <div class="footer-column brand-col">
-            <h3>Mercado Raíz</h3>
-            <p>Conectando productores locales con consumidores conscientes. Productos frescos, locales y de calidad para tu familia.</p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <div class="footer-content">
+            <div class="footer-brand-center">
+                <h3>Mercado Raíz</h3>
+                <p>Conectando el corazón de Cayambe con tu hogar.</p>
+            </div>
+            
+            <div class="footer-socials-center">
+                <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-whatsapp"></i></a>
+            </div>
+
+            <div class="footer-copy-center">
+                <p>&copy; 2026 Mercado Raíz - Identidad y Sabor de Nuestra Tierra.</p>
             </div>
         </div>
-        <div class="footer-column">
-            <h3>Enlaces Rápidos</h3>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="proveedores.html">Proveedores</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>Información de Contacto</h3>
-            <p><i class="fas fa-map-marker-alt"></i> Calle Principal 123, Cayambe, Ecuador</p>
-            <p><i class="fas fa-phone"></i> +593 99 999 9999</p>
-            <p><i class="fas fa-clock"></i> Lun - Sáb: 8:00 AM - 6:00 PM</p>
-        </div>
-    </div>
-    <div class="footer-bottom">
-        <p>&copy; 2026 Mercado Raíz. Todos los derechos reservados.</p>
-    </div>
-</footer>
+    </footer>
 
-    <a href="carrito.html" class="floating-cart">
-        <i class="fas fa-shopping-cart"></i>
-        <span id="cartCount" class="cart-badge hidden">0</span>
-    </a>
+    <div id="cart-overlay" class="cart-overlay"></div>
+    <div id="side-cart" class="side-cart">
+        <div class="cart-header">
+            <h3>Tu Cosecha (Carrito)</h3>
+            <button id="close-cart" class="close-btn">&times;</button>
+        </div>
+        <div id="cart-items-container" class="cart-body">
+            <p class="empty-msg">Tu carrito está vacío. ¡Empieza a comprar!</p>
+        </div>
+        <div class="cart-footer">
+            <div class="cart-total">
+                <span>Total:</span>
+                <span id="cart-total-amount">$0.00</span>
+            </div>
+            <button class="btn-checkout">Finalizar Compra</button>
+            <a href="carrito.html" class="btn-view-cart">Ver Carrito Completo</a>
+        </div>
+    </div>
+
+    <div id="floating-cart-btn" class="floating-cart-trigger">
+        <i class="fas fa-shopping-basket"></i>
+        <span id="cart-count-badge" class="cart-badge">0</span>
+    </div>
 
     <script src="js/data.js"></script>
     <script src="js/main.js"></script>
