Noveno commit: conexion de los productos admin y usuario

--- a/admin.html
+++ b/admin.html
@@ -88,6 +88,17 @@
                     <button type="submit" class="btn-nuevo" style="padding: 10px 20px; border:none; border-radius:8px; cursor:pointer; background:var(--admin-primary); color:white;">Guardar Cambios</button>
                 </div>
             </form>
+
+            <div class="form-group">
+    <label for="productoCategoria">Categoría</label>
+    <select id="productoCategoria" required>
+        <option value="">Selecciona una categoría</option>
+        <option value="Papas y Tubérculos">Papas y Tubérculos</option>
+        <option value="Hortalizas">Hortalizas</option>
+        <option value="Frutas">Frutas</option>
+        <option value="Lácteos">Lácteos</option>
+    </select>
+</div>
         </div>
     </div>
 
