Doceavo commit: integracion base de datos SUPABASE

--- a/proveedor.html
+++ b/proveedor.html
@@ -85,6 +85,27 @@
         <span id="cart-count-badge" class="cart-badge">0</span>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database-compat.js"></script>
+
+    <script>
+      const firebaseConfig = {
+        apiKey: "AIzaSyBqakqg919pu0GjMkaJhntman0n4Q1jnw",
+        authDomain: "mercado-raiz.firebaseapp.com",
+        databaseURL: "https://mercado-raiz-default-rtdb.firebaseio.com",
+        projectId: "mercado-raiz",
+        storageBucket: "mercado-raiz.firebasestorage.app",
+        messagingSenderId: "886584284411",
+        appId: "1:886584284411:web:f006908eeb8d9da224cc5e",
+        measurementId: "G-5EW3Y8Z2XE"
+      };
+
+      // Inicializar
+      firebase.initializeApp(firebaseConfig);
+      const db = firebase.database(); 
+      // Ahora la variable 'db' ya existe y main.js la puede usar
+    </script>
+
     <script src="js/data.js"></script>
     <script src="js/main.js"></script>
     <script>
