Quinceavo commit: admin.html con base de datos y mejoras

--- a/admin.html
+++ b/admin.html
@@ -92,7 +92,8 @@
 
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database-compat.js"></script>
-
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-storage-compat.js"></script>
+    
     <script>
         // Configuración de tu Firebase
         const firebaseConfig = {
